%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!1107 &-1473172862801222550
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: 8745338592082835617}
    m_Position: {x: 50, y: 290, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 3940619911017181344}
    m_Position: {x: 50, y: 170, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions:
  - {fileID: 811778611037462152}
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 280, y: 60, z: 0}
  m_EntryPosition: {x: 50, y: 80, z: 0}
  m_ExitPosition: {x: 300, y: 130, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 3940619911017181344}
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: AI_Guard
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: velx
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: vely
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: move
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: -1473172862801222550}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 1
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1109 &811778611037462152
AnimatorTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions: []
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 3940619911017181344}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 1
--- !u!1102 &3940619911017181344
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 8274977123886441189}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: -3100369314251171874, guid: 3b08d254f23d94d4e8835a1f7caafa23,
    type: 3}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!206 &4023152055466619104
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: -3234397117390894100, guid: ee40ab7137381214b93d649044115ca0,
      type: 3}
    m_Threshold: 0.6666667
    m_Position: {x: 0, y: 0.5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: velx
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 5780754941618215405, guid: 6ddab8e92ee1dc847b1e86a9a384d047,
      type: 3}
    m_Threshold: 0.6666667
    m_Position: {x: -0.7, y: 0.5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: velx
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 5094972084616858998, guid: 6ddab8e92ee1dc847b1e86a9a384d047,
      type: 3}
    m_Threshold: 0.6666667
    m_Position: {x: 0.7, y: 0.5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: velx
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 5522812681064789136, guid: 514ee773cf4a1824ba3d0044262cb2b0,
      type: 3}
    m_Threshold: 0.6666667
    m_Position: {x: 0, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: velx
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 6148109966606671466, guid: 514ee773cf4a1824ba3d0044262cb2b0,
      type: 3}
    m_Threshold: 0.6666667
    m_Position: {x: -1, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: velx
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -5286009312453217497, guid: 514ee773cf4a1824ba3d0044262cb2b0,
      type: 3}
    m_Threshold: 0.6666667
    m_Position: {x: 1, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: velx
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 4282126747554978599, guid: ee40ab7137381214b93d649044115ca0,
      type: 3}
    m_Threshold: 0.6666667
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: velx
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -8770123775910873761, guid: d245bfe1b6547fa4199dd895badc16cf,
      type: 3}
    m_Threshold: 0.6666667
    m_Position: {x: 0, y: -0.52}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: velx
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 6743939574110694705, guid: 5b676f35ce1f30f4fa5a34d3dc2a942a,
      type: 3}
    m_Threshold: 0.6666667
    m_Position: {x: -0.15, y: -0.81}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: velx
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 6743939574110694705, guid: 3ecde5b0b0af6a043a58150b16590cca,
      type: 3}
    m_Threshold: 0.6666667
    m_Position: {x: 0.17, y: -0.81}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: velx
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -3234397117390894100, guid: ee40ab7137381214b93d649044115ca0,
      type: 3}
    m_Threshold: 0.6666667
    m_Position: {x: 0, y: 0.7}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: velx
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -203655887218126122, guid: ffefc61cac5e21b49ada14bec8e335c9,
      type: 3}
    m_Threshold: 0.6666667
    m_Position: {x: -0.15, y: -1.16}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: velx
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -203655887218126122, guid: 0617579f26cc90c45aeebd8f075181a1,
      type: 3}
    m_Threshold: 0.6666667
    m_Position: {x: 0.15, y: -1.16}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: velx
    m_Mirror: 0
  m_BlendParameter: velx
  m_BlendParameterY: vely
  m_MinThreshold: 0.6666667
  m_MaxThreshold: 0.6666667
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 2
--- !u!1101 &4229466716545320389
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: move
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 3940619911017181344}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.71843016
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &8274977123886441189
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: move
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 8745338592082835617}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.96428573
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &8745338592082835617
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Move
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 4229466716545320389}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 1
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 4023152055466619104}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
